--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -66,7 +66,7 @@
 \input{211028_SWE2_Muster - Fassade.tex}						% SubSection
 \input{211028_SWE2_Muster - Bridge.tex}						% SubSection
 \input{211028_SWE2_Muster - Observer.tex}					% SubSection
-\input{211028_SWE2_Muster - Eventbus.tex}					% SubSection
+%\input{211028_SWE2_Muster - Eventbus.tex}					% SubSection
 
 
 
@@ -121,7 +121,7 @@
 
 
 
-\input{DefaultContent/210105_Default_Anhang.tex}
+%\input{DefaultContent/210105_Default_Anhang.tex}
 
 
 
