--- a/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
@@ -4,6 +4,8 @@ Entsprechend \refImg{fig:DomainMod} lässt sich im Domänenmodell ein Aggregat i
 \newSec[DDDAggDroneMod]{Drone Model}{4}
 Das Aggregat \textit{Drone Model} bildet die Funktionalität einer physisch vorhandenen Drohne ab.
 
+Ferner soll auf das Objekt \textit{Drone} als \textit{Aggregate Root} hingewiesen werden, welches den Einstieg in dieses Aggregat ermöglicht und eine Kommunikation mit weiteren Entities des Aggregates obsolet macht. Diese Struktur entspricht einer Fassade. Im Code und in dieser Ausarbeitung wurde die Klasse \textit{parrotControl} als Fassade definiert (siehe \refCap{MusterFassade}).
+
 
 
 
