--- a/Ausarbeitung/211028_SWE2_DDD - Modell.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Modell.tex
@@ -19,6 +19,7 @@ Das Modell in \refImg{fig:DomainMod} begrenzt sich auf die Betrachtung der Regel
 \end{center}
 
 \vspace{0.25cm}
+\href{https://github.com/MaagMich/SWE2\_Project/blob/c5c3674bd201ee306463881cf711bb2ce9229842/Ausarbeitung/Pictures/Domain\%20Modell.png}{Image-Link}\\
 Die gestrichelten Pfeile deuten eine Nutzung der entsprechenden Klasse an, wobei hier kein Attribut innerhalb der ausgehenden Klasse vorgesehen.\\
 Das Aggregat wird als blauer Kasten dargestellt.\\
 Objekte, welche in Kawasaki-grün eingefärbt sind, entsprechen \textit{Entities}.\\
