--- a/Ausarbeitung/211028_SWE2_DDD - Objects.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Objects.tex
@@ -7,7 +7,7 @@ Nachfolgend werden die \textit{Value Objects} aus \refImg{fig:DomainMod} beschri
 
 
 \newSec[DDDVOPose]{Pose}{4}
-Eine Pose ist eine mathematische Beschreibung für eine Punkt und eine Ausrichtung in einem Raum. Nimmt die Drohne eine andere Pose ein, wird hierfür eine searate Instanz generiert.
+Eine Pose ist eine mathematische Beschreibung für eine Punkt und eine Ausrichtung in einem Raum. Nimmt die Drohne eine andere Pose ein, wird hierfür eine separate Instanz generiert.
 
 Die von der Pose gekapselten Objekte \textit{Position} und \textit{Orientierung} werden als mathematische Vektoren im 3D-Raum abgebildet.
 
