--- a/Ausarbeitung/211028_SWE2_Muster - Bridge.tex
+++ b/Ausarbeitung/211028_SWE2_Muster - Bridge.tex
@@ -1,4 +1,4 @@
-\newSec[MusterBridge]{Brücke}{3}
+\newSec[MusterBridge]{Brücke}{2}
 
 \newSec{Klassifikation}{4}
 Objektbasiertes Strukturmuster\footnote{Information aus:\\https://www2.htw-dresden.de/~muellerd/SWEngII\_SS2019/09\_Entwurfsmuster.pdf}
@@ -14,6 +14,7 @@ Objektbasiertes Strukturmuster\footnote{Information aus:\\https://www2.htw-dresd
 \end{center}
 
 \vspace{0.25cm}
+\href{https://github.com/MaagMich/SWE2\_Project/blob/c5c3674bd201ee306463881cf711bb2ce9229842/Ausarbeitung/Pictures/Bridge.png}{Image-Link}
 \end{figure}
 
 
