--- a/Ausarbeitung/211028_SWE2_Muster - Fassade.tex
+++ b/Ausarbeitung/211028_SWE2_Muster - Fassade.tex
@@ -1,4 +1,4 @@
-\newSec[MusterFassade]{Fassade}{3}
+\newSec[MusterFassade]{Fassade}{2}
 Die \CodeClass{parrotControl} kann als Fassade angesehen werden, da hier die Interaktion mit den darin verwalteten Klassen gekapselt wird.
 
 
@@ -16,6 +16,7 @@ Objektbasiertes Strukturmuster\footnote{Anhand der Vorlesungsfolien \glq Entwurf
 \end{center}
 
 \vspace{0.25cm}
+\href{https://github.com/MaagMich/SWE2\_Project/blob/c5c3674bd201ee306463881cf711bb2ce9229842/Ausarbeitung/Pictures/Fassade.png}{Image-Link}
 \end{figure}
 
 \newSec[Akteure]{Akteure\footnotemark[3]}{4}
