--- a/Ausarbeitung/211028_SWE2_Muster - Observer.tex
+++ b/Ausarbeitung/211028_SWE2_Muster - Observer.tex
@@ -1,4 +1,4 @@
-\newSec[MusterObserver]{Beobachter}{3}
+\newSec[MusterObserver]{Beobachter}{2}
 
 \newSec{Klassifikation}{4}
 Objektbasiertes Verhaltensmuster\footnote{Anhand der Vorlesungsfolien \glq Entwurfsmuster Beobachter\grq}
@@ -14,6 +14,7 @@ Objektbasiertes Verhaltensmuster\footnote{Anhand der Vorlesungsfolien \glq Entwu
 \end{center}
 
 \vspace{0.25cm}
+\href{https://github.com/MaagMich/SWE2\_Project/blob/c5c3674bd201ee306463881cf711bb2ce9229842/Ausarbeitung/Pictures/Observer.png}{Image-Link}\\
 Im \ROS-Framework wird die Funktionalität mittels \textit{Function Pointer} an den Beobachter übertragen. Eine Vererbung findet nicht statt.\\
 \note{Die in der Abbildung als \glqq MagicUnicorn\glqq bezeichnete Klasse ist in diesem Zusammenhang die Untiefen des \ROS-Frameworks, welches deutlich über das im verfügbaren Zeitraum aufbringbare Verständnis der Autor:innen hinausgeht.}
 \end{figure}
