--- a/Ausarbeitung/211028_SWE2_DDD - Language.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Language.tex
@@ -1,6 +1,6 @@
 \newSec[DDDLang]{Ubiquitous Language}{2}
 
-Die Ubiquitous Language ist eine einheitliche Sprache, auf die sich Entwickler und Domänenexperten einigen und gemeinsam verwenden. In diesem Projekt ist aus Zeitgründen keine solche einheitliche Sprache definiert worden, da die Rollen \textit{Domänen-Expert*in} und \textit{Entwickler*in} von der gleichen Person eingenommen wurden. Verständnisprobleme sind hierbei nicht zu erwarten.\footnote{Aber nie ganz auszuschließen.}
+Die \textit{Ubiquitous Language} ist eine einheitliche Sprache, auf die sich Entwickler und Domänenexperten einigen und gemeinsam verwenden. In diesem Projekt ist aus Zeitgründen keine solche einheitliche Sprache definiert worden, da die Rollen \textit{Domänen-Expert*in} und \textit{Entwickler*in} von der gleichen Person eingenommen wurden. Verständnisprobleme sind hierbei nicht zu erwarten.\footnote{Aber nie ganz auszuschließen.}
 
 \clearpage
 Um zukünftigen Anwendenden den Zusammenhang zwischen Domänenmodell und Code aufzuzeigen, soll anschließend eine Zuodnung von Objekten des Domänenmodells zu Klassen im Code folgen.
@@ -16,6 +16,12 @@ Orientation   & Vector3D           \\
 User Input    & \ROS-Message         
 \end{tabular}
 \end{table}
+
+Darüber hinaus kann die Dokumentation der zugrundeliegenden Studienarbeit im weiteren Sinne als \textit{Ubiquitous Language}-Dokument verstanden werden. Hier werden alle verwendeten Klassen beschrieben. \note{Auf das genannte Dokument kann an dieser Stelle noch nicht verwiesen werden, da es noch nicht vollständig existiert. Die Abgabe der Studienarbeit ist auf nach der Abgabe dieser Ausarbeitung datiert.}
+
+Ein separates Dokument, welches ausschließlich eine \textit{Ubiquitous Language} definiert, wäre sinnvoll.
+
+
 
 
 
