--- a/Ausarbeitung/211028_SWE2_Principles - Conway.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - Conway.tex
@@ -2,3 +2,5 @@
 
 Die Entwicklung der betrachteten Software basiert auf einer Person, daher kann davon ausgegangen werden, dass kein Kommunikationsproblem vorliegt.
 Kommunikation mit Personen, die nicht Teil des Entwicklungsteams sind (Auftraggeber \bzw\ Betreuer der Studienarbeit), wird hierbei nicht betrachtet.
+
+Eine Dokumentation des Codes erscheint dennoch sinnvoll, um zukünftige Interaktion mit dem Projekt zu vereinfachen (siehe \refCap{DDDLang}).
